--- a/src/App.sass
+++ b/src/App.sass
@@ -11,102 +11,107 @@ $paragraph-font: 'PT Mono', monospace
 body
     background-color: white
     position: relative
-    font-family: $headline-font
 
 main
-    position: relative
     overflow-y: auto
     overflow-x: hidden
 
-.navContainer
-    display: flex
-    position: fixed
-    top: 0
-    height: 100%
-    width: 100%
-    overflow: hidden
-
-.navLink
-    padding-top: 4rem
-    height: 100%
-    width: 60px
-    will-change: width
-    position: relative
-    overflow: hidden
-    transition: width .5s ease-in-out
-    font-size: 1.4rem
-    letter-spacing: 2px
-    z-index: 5
-    &:nth-child(1)
-        background-color: white
-        animation: navStartAnimation .6s linear
-    &:nth-child(2)
-        background-color: #5ea3ec
-        animation: navStartAnimation .5s linear
-    &:nth-child(3)
-        background-color: #f64444
-        animation: navStartAnimation .4s linear
-    &:nth-child(4)
-        background-color: #ffb400
-        animation: navStartAnimation .3s linear
+//navbar
+.nav
+    &__list
+        display: flex
+        position: fixed
+        top: 0
+        height: 100%
+        width: 100%
+        overflow: hidden
+    &__item
+        height: 100%
+        width: 60px
+        will-change: width
+        position: relative
+        overflow: hidden
+        transition: width .5s ease-in-out
+        &--open
+            width: calc(100vw - 180px)
+            p, span, a
+                opacity: 0
+        &:nth-child(1)
+            background-color: #fff
+            animation: navStartAnimation .7s linear
+        &:nth-child(2)
+            background-color: #5ea3ec
+            animation: navStartAnimation .6s linear
+        &:nth-child(3)
+            background-color: #f64444
+            animation: navStartAnimation .5s linear
+        &:nth-child(4)
+            background-color: #ffb400
+            animation: navStartAnimation .4s linear
+            text-align: center
+    &__anchor
+        display: inline-block
+        width: 100%
+        height: 100%
+        padding-top: 4rem
+        font-family: $headline-font
+        font-size: 1.4rem
+        letter-spacing: 2px
+        &:visited
+            color: black
+    &__headline
         text-align: center
-    p
-        text-align: center
-    span
+    &__text
         display: block
         position: absolute
         transform: translateY(-50%) translateX(-50%) rotate(90deg)
         transform-origin: center
         top: 50%
         left: 50%
-    &:visited
-        color: black
 
-.open
-    width: calc(100vw - 180px)
-    p, span
-        opacity: 0
-
-.landing
+.pageContainer
     position: relative
     width: calc(100vw - 180px)
     color: black
     overflow: hidden
 
+//HOME
 .homePage
-    display: grid
-    place-content: center
+    display: flex
+    align-items: center
     height: 100vh
     font-weight: 100
     padding-left: 4rem
-    width: 68%
-    display: flex
-    align-items: center
     -ms-overflow-style: none
     scrollbar-width: none
     &::-webkit-scrollbar
         scrollbar-width: none
         -ms-overflow-style: none
         display: none
-    p
+    &__headline
+        width: 67%
+        font-family: $headline-font
         font-size: 5rem
+        font-weight: 100
         line-height: 6rem
         animation: textOpacity 2s ease forwards
-        a
+    &__anchor
+        color: black
+        font-weight: 100
+        text-decoration: none
+        padding-bottom: 4px
+        background-image: repeating-linear-gradient(-45deg,#ffb400,#ffb400 1px,transparent 0,transparent 12px),repeating-linear-gradient(45deg,#ffb400,#ffb400 1px,transparent 0,transparent 12.2px)
+        background-size: 15px 10px
+        background-position: 0 103%,2px 103%
+        background-repeat: repeat-x
+        will-change: translateY
+        animation: underline 40s infinite
+        animation-timing-function: ease
+        animation-timing-function: linear
+        &:hover
             color: black
-            font-weight: 100
-            text-decoration: none
-            padding-bottom: 4px
-            background-image: repeating-linear-gradient(-45deg,#ffb400,#ffb400 1px,transparent 0,transparent 12px),repeating-linear-gradient(45deg,#ffb400,#ffb400 1px,transparent 0,transparent 12.2px)
-            background-size: 15px 10px
-            background-position: 0 103%,2px 103%
-            background-repeat: repeat-x
-            animation: underline 40s infinite
-            animation-timing-function: ease
-            animation-timing-function: linear
 
-.imageContainer
-    width: 100%
+.bgContainer
     height: 100vh
     background: url("./assets/images/homeImage.jpg") top left
     background-size: cover
@@ -114,27 +119,169 @@ main
     opacity: 0
     transition: opacity 2s
 
-.descriptionContainer
-    padding: 10rem 6rem
-    h1
+.descriptions
+    padding: 10rem 4rem
+    &__headline
+        font-family: $headline-font
         font-size: 8rem
         font-weight: 100
         width: 50%
         margin-bottom: 4rem
+    &__list
+        display: flex
+        justify-content: space-between
+        will-change: opacity
+        list-style: none
+        opacity: 0
+        transition: opacity 2s
+    &__item
+        width: 26rem
+        height: 35rem
+    &__image
+        width: 100%
+        height: 100%
+        margin-bottom: 2rem
+    &__text
+        padding-right: 1.7rem
+        font-family: $paragraph-font
+        font-size: .8rem
 
-.descriptions
+.eventsBanner
+    display: flex
+    justify-content: space-around
+    align-items: center
+    padding: 4rem
+    &__logo
+        font-size: 4rem
+        -webkit-text-stroke: 1px black
+        -webkit-text-fill-color: transparent
+    &__headline
+        font-family: $headline-font
+        font-size: 7rem
+        font-weight: 100
+        width: 20%
+        text-align: center
+
+.homeEvents
+    padding: 1rem 4rem
+    &__list
+        display: flex
+        justify-content: space-between
+        position: relative
+        padding: 75px 0 100px
+        list-style: none
+        background-image: linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(90deg,#000 50%,transparent 0)
+        /* background-position: 0 0,0 100%,left 14px,0 calc(100% - 14px) */
+        background-position-x: 0px, 0px, 0px, 0px
+        background-position-y: 0px, 14px, 100%, calc(100% - 14px)
+        background-repeat: repeat-x,repeat-x,repeat-x,repeat-x
+        background-size: 24px 1px,24px 1px,24px 1px,24px 1px
+        animation: 1s infinite normal dashedUnderlineAnimation
+        animation-timing-function: linear
+    &__item
+        width: 22rem
+        text-align: center
+        font-family: $paragraph-font
+    &__button
+        font-family: $paragraph-font
+        background-color: white
+        border: 1px solid black
+        padding: 1rem 3rem
+        position: relative
+        bottom: .5rem
+        left: 50%
+        transform: translateY(-50%) translateX(-50%)
+        will-change: background-color, color
+        transition: background-color .4s, color .4s
+        cursor: pointer
+        &:hover
+            background-color: black
+            color: white
+
+.address
     display: flex
     justify-content: space-between
-    &__card
-        width: 25rem
-        height: 35rem
-        img
-            width: 100%
-            height: 100%
-        p
-            margin-top: 2rem
-            font-family: $paragraph-font
+    gap: 4rem
+    padding: 5rem 4rem
+    &__text
+        padding: 4rem 9rem
+        text-align: center
+        font-family: $headline-font
+        font-size: 3.5rem
+        font-weight: 100
+    &__map
+        width: 100%
+        height: 100%
+        padding: 1px
+    &__box
+        width: 50%
+        height: 20rem
+        background-image: linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(180deg,#000 50%,transparent 0),linear-gradient(180deg,#000 50%,transparent 0)
+        background-position: 0 0,0 100%,0 0,100% 0
+        background-repeat: repeat-x,repeat-x,repeat-y,repeat-y
+        background-size: 30px 1px,30px 1px,1px 30px,1px 30px
+        &:hover
+            animation: .6s infinite normal boxDashedUnderlineAnimation
+            animation-timing-function: linear
 
+.vendor
+    display: grid
+    place-items: center
+    padding: 3rem 0
+    background-image: repeating-linear-gradient(-74deg,rgba(0,0,0,.2),rgba(0,0,0,.2) 1px,transparent 0,transparent 4px),repeating-linear-gradient(-74deg,rgba(0,0,0,.2),rgba(0,0,0,.2) 1px,transparent 0,transparent 4px)
+    background-position: 0 0,0 100%
+    background-size: 100% 12px,100% 12px
+    background-repeat: repeat-x,repeat-x,repeat-y,repeat-y
+    &__headline
+        font-family: $headline-font
+        font-size: 3rem
+        font-weight: 100
+        margin: 1rem
+    &__button
+        margin: 1rem
+        border: 1px solid black
+        padding: 1rem 3rem
+        background-color: white
+        will-change: color, background-color
+        transition: color .4s, background-color .4s
+        cursor: pointer
+        font-family: $paragraph-font
+        &:hover
+            color: white
+            background-color: black
+
+.socials
+    padding: 3rem 4rem
+    &__list
+        display: flex
+        justify-content: space-between
+        gap: 4rem
+        list-style: none
+    &__item
+        width: 100%
+        padding: 2rem 3rem
+        font-family: $paragraph-font
+        font-size: .9rem
+        text-align: center
+        background-image: linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(180deg,#000 50%,transparent 0),linear-gradient(180deg,#000 50%,transparent 0)
+        background-position: 0 0,0 100%,0 0,100% 0
+        background-repeat: repeat-x,repeat-x,repeat-y,repeat-y
+        background-size: 30px 1px,30px 1px,1px 30px,1px 30px
+
+@keyframes boxDashedUnderlineAnimation
+    0%
+        background-position-x: 0px, 0px, 0%, 100%
+        background-position-y: 0%, 100%, 0px, 0px
+    100%
+        background-position-x: 30px, -30px, 0%, 100%
+        background-position-y: 0%, 100%, -30px, 30px
+
+@keyframes dashedUnderlineAnimation
+    0%
+        background-position-x: 0, 0, 0, 0
+
+    100%
+        background-position-x: 24px, 24px, -24px, -24px
 
 @keyframes navStartAnimation
     from
