--- a/src/App.sass
+++ b/src/App.sass
@@ -18,24 +18,26 @@ main
 
 //Navbar
 .nav
+    position: relative
     &__list
         display: flex
         position: fixed
         top: 0
         height: 100%
         width: 100%
-        overflow: hidden
+        list-style: none
     &__item
         height: 100%
         width: 60px
         will-change: width
         position: relative
-        overflow: hidden
         transition: width .5s ease-in-out
         &--open
             width: calc(100vw - 180px)
-            p, span, a
+            .nav__headline, .nav__text, .nav__anchor
                 opacity: 0
+                will-change: opacity
+                transition: opacity .2s
         &:nth-child(1)
             background-color: #fff
             animation: navStartAnimation .8s ease-in-out
@@ -49,6 +51,9 @@ main
             background-color: #ffb400
             animation: navStartAnimation .5s ease-in-out
             text-align: center
+    &__anchor, &__headline, &__text
+        will-change: opacity
+        transition: opacity 1s
     &__anchor
         display: inline-block
         width: 100%
@@ -60,6 +65,23 @@ main
         color: black
         &:visited
             color: black
+    &__homeIconAnchor
+        width: 3rem
+        height: 3.5rem
+        position: fixed
+        top: 55px
+        left: 6px
+        will-change: width, margin
+        transition: margin .5s, width .5s
+        z-index: 5
+        background: url("/src/assets/images/homeIcon.svg") top left no-repeat
+        background-size: 100%
+        &--open
+            width: 3.5rem
+            margin-left: 4rem
+            left: 0
+            will-change: width, margin
+            transition: margin .5s, width .5s
     &__headline
         text-align: center
     &__text
@@ -77,8 +99,10 @@ main
     color: black
     overflow: hidden
     animation: opacityAnimation 2s linear forwards
+    z-index: 1
 
 //Intro component
+    //change introText div textaling is enough
 .introPage
     margin: 11rem 4rem
     position: relative
@@ -102,7 +126,7 @@ main
         opacity: .3
         &::after
             position: absolute
-            bottom: -8px
+            bottom: -9px
             content: "\21E3"
             margin-left: .5rem
             font-size: 1.9rem
@@ -125,6 +149,106 @@ main
         opacity: 0
         animation: 3s forwards linear opacityAnimation
 
+//Food Vendor Page
+//intro food vendor component
+.introPageFoodVendor
+    margin: 11rem 4rem
+    position: relative
+    animation: 2s forwards linear opacityAnimation
+    &__headerText
+        text-align: right
+        font-family: $paragraph-font
+        font-size: .9rem
+        line-height: 1.3rem
+        white-space: pre-line
+    &__anchor, &__socialLinks
+        border: 1px solid black
+        color: black
+        text-decoration: none
+        font-family: $paragraph-font
+        font-size: .8rem
+        letter-spacing: 1px
+        background-color: transparent
+        will-change: background-color, color
+        transition: background-color .4s, color .4s
+        cursor: pointer
+        &_:visited
+            color: black
+        &:hover
+            color: white
+            background-color: black
+    &__anchor
+        padding: .5rem 4rem
+        display: flex
+        align-items: center
+        position: absolute
+        &::before
+            content: "\21E0"
+            margin-right: .5rem
+            font-size: 1.4rem
+    &__socialLinks
+        display: inline-block
+        text-align: center
+        width: 10rem
+        padding: 1rem
+        white-space: nowrap
+    &__contentContainer
+        padding-top: 5rem
+        display: flex
+        gap: 2rem
+        min-height: 50vh
+    &__headline
+        margin-bottom: 5rem
+        font-family: $headline-font
+        font-size: 8rem
+        line-height: 9rem
+        font-weight: 100
+    &__text
+        font-family: $paragraph-font
+        font-size: .9rem
+        line-height: 1.4rem
+    &__imageSocialContainer
+        margin-left: 8rem
+        min-height: 100%
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+    &__list
+        margin-top: 2rem
+        list-style: none
+        display: flex
+        justify-content: flex-end
+        align-items: center
+        gap: 1rem
+        flex-wrap: wrap
+    &__image
+        width: 28rem
+        max-height: auto
+        opacity: 0
+        animation: 3s forwards linear opacityAnimation
+
+.foodVendorImages
+    margin: 4rem
+    background: linear-gradient(90deg, black 50%, transparent 0), linear-gradient(90deg, black 50%, transparent 0)
+    background-position: 0 0, 0 15px
+    background-repeat: repeat-x
+    background-size: 25px 1px
+    animation: 1s infinite normal forwards foodVendorDashedLinesAnimation
+    animation-timing-function: linear
+    &__list
+        padding: 5rem 0
+        display: grid
+        grid-template-columns: repeat(2, 1fr)
+        gap: 4rem
+        list-style: none
+    &__item
+        border: 1px solid black
+        display: grid
+        place-content: center
+    &__image
+        max-width: 100%
+        max-height: auto
 //Event component
 .pageEvents
     padding: 1rem 4rem
@@ -243,6 +367,7 @@ main
     background-size: 30px 1px,30px 1px,1px 30px,1px 30px
     &:hover
         animation: .8s infinite boxDashedUnderlineAnimation
+        animation-timing-function: linear
     &__headline
         font-size: 1.5rem
         font-weight: 100
@@ -282,9 +407,11 @@ main
 //PAGES
 //Home page
 .homePage
+    padding-top: 15rem
+    padding-bottom: 10rem
     display: flex
     align-items: center
-    height: 100vh
+    min-height: 100vh
     font-weight: 100
     padding-left: 4rem
     -ms-overflow-style: none
@@ -320,6 +447,8 @@ main
     will-change: opacity
     opacity: 0
     transition: opacity 2s
+    position: relative
+    z-index: 10
 
 .descriptions
     padding: 10rem 4rem
@@ -390,6 +519,24 @@ main
         &:hover
             animation: .6s infinite boxDashedUnderlineAnimation linear
 
+//Policy Page
+.policy
+    padding: 25rem 4rem 1rem 4rem
+    position: relative
+    color: black
+    &__headline
+        font-family: $headline-font
+        font-size: 5rem
+        font-weight: 400
+        margin-bottom: 2rem
+    &__text
+        width: 70%
+        font-family: $paragraph-font
+        font-size: .9rem
+        margin-bottom: 2rem
+        line-height: 1.5rem
+
+
 //Food page
 .foodPage
     margin: 11rem 4rem
@@ -434,6 +581,7 @@ main
         width: 27rem
         height: 30rem
 
+//VendorGrid component
 .foodVendors
     margin: 4rem 4rem
     display: grid
@@ -444,6 +592,7 @@ main
     z-index: 1
     &__anchor
         text-decoration: none
+        color: black
         &:visited
             color: black
     &__food
@@ -458,40 +607,9 @@ main
         width: 500px
         height: 500px
         position: absolute
-        opacity: 1
+        opacity: 0
         will-change: opacity
         transition: opacity .8s ease-in
-
-// .pho
-//     background: url("/src/assets/images/pho.jpg") no-repeat
-//     background-size: 100%
-// .mooncake
-//     background: url("/src/assets/images/mooncake.jpg") no-repeat
-//     background-size: 100%
-// .burger
-//     background: url("/src/assets/images/burger.jpg") no-repeat
-//     background-size: 100%
-// .burrito
-//     background: url("/src/assets/images/burrito.jpg") no-repeat
-//     background-size: 100%
-// .chickenSkewer
-//     background: url("/src/assets/images/chickenSkewer.jpg") no-repeat
-//     background-size: 100%
-// .cockedSeafood
-//     background: url("/src/assets/images/cockedSeafood.jpg") no-repeat
-//     background-size: 100%
-// .iceFruitBowl
-//     background: url("/src/assets/images/iceFruitBowl.jpg") no-repeat
-//     background-size: 100%
-// .pancakes
-//     background: url("/src/assets/images/pancakes.jpg") no-repeat
-//     background-size: 100%
-// .salmon
-//     background: url("/src/assets/images/salmon.jpg") no-repeat
-//     background-size: 100%
-// .saladBacon
-//     background: url("/src/assets/images/saladBacon.jpg") no-repeat
-//     background-size: 100%
 
 .foodBannerContainer
     margin: 2rem 4rem
@@ -511,7 +629,12 @@ main
         &:nth-child(1)
             animation: 2s infinite foodLogoAnimation ease-in-out
         &:nth-child(3)
-            animation: 2s infinite foodLogoAnimationReverse ease-in-out         
+            animation: 2s infinite foodLogoAnimationReverseIcon ease-in-out
+    &__iconFoodVendor
+        &:nth-child(1)
+            animation: 2s infinite foodLogoAnimation ease-in-out
+        &:nth-child(3)
+            animation: 2s infinite foodLogoAnimationReverse ease-in-out
     &__textContainer
         width: 30%
         text-align: center
@@ -725,6 +848,11 @@ main
     margin: 0 4rem 4rem 4rem
 
 
+@keyframes foodVendorDashedLinesAnimation
+    0%
+        background-position-x: 0px, 0px
+    100%
+        background-position-x: 25px, -25px
 @keyframes foodLogoAnimationFlip
     0%
         transform: translateY(1.5rem) scaleX(-1)
@@ -733,13 +861,21 @@ main
     100%
         transform: translateY(1.5rem) scaleX(-1)
 
-@keyframes foodLogoAnimationReverse
+@keyframes foodLogoAnimationReverseIcon
     0%
         transform: translateY(1.5rem) rotate(180deg)
     50%
         transform: translateY(-1.5rem) rotate(180deg)
     100%
         transform: translateY(1.5rem) rotate(180deg)
+
+@keyframes foodLogoAnimationReverse
+    0%
+        transform: translateY(1.5rem)
+    50%
+        transform: translateY(-1.5rem)
+    100%
+        transform: translateY(1.5rem)
 
 @keyframes foodLogoAnimation 
     0%
