--- a/src/components/footer/Footer.sass
+++ b/src/components/footer/Footer.sass
@@ -3,8 +3,6 @@
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
     
- 
-//Footer component
 .footerBanner
     margin: 3rem 4rem
     padding: 3rem 0
@@ -79,8 +77,7 @@ $paragraph-font: 'PT Mono', monospace
     background-repeat: repeat-x,repeat-x,repeat-y,repeat-y
     background-size: 30px 1px,30px 1px,1px 30px,1px 30px
     &:hover
-        animation: .8s infinite boxDashedUnderlineAnimation
-        animation-timing-function: linear
+        animation: .8s infinite boxDashedUnderlineAnimation linear
     &__headline
         width: 22%
         font-size: 1.5rem
