--- a/src/components/navbar/Navbar.sass
+++ b/src/components/navbar/Navbar.sass
@@ -2,7 +2,6 @@
 
 $headline-font: 'EB Garamond', serif
 
-//Navbar
 .nav
     position: relative
     &__list
@@ -51,6 +50,15 @@ $headline-font: 'EB Garamond', serif
         color: black
         &:visited
             color: black
+    &__headline
+        text-align: center
+    &__text
+        display: block
+        position: absolute
+        transform: translateY(-50%) translateX(-50%) rotate(90deg)
+        transform-origin: center
+        top: 50%
+        left: 50%
     &__homeIconAnchor
         width: 3rem
         height: 3.5rem
@@ -62,24 +70,27 @@ $headline-font: 'EB Garamond', serif
         z-index: 5
         background: url("/src/assets/icons/homeIcon.svg") top left no-repeat
         background-size: 100%
+        animation: homeIconStartAnimation .9s ease-in-out
         &--open
             width: 3.5rem
             margin-left: 4rem
             left: 0
             will-change: width, margin
             transition: margin .5s, width .5s
-    &__headline
-        text-align: center
-    &__text
-        display: block
-        position: absolute
-        transform: translateY(-50%) translateX(-50%) rotate(90deg)
-        transform-origin: center
-        top: 50%
-        left: 50%
 
 @keyframes navStartAnimation
-    from
+    0%
         transform: translateY(-100%)
-    to
+    100%
         transform: translateY(0)
+
+@keyframes homeIconStartAnimation
+    0%
+        transform: translateY(-100%)
+        opacity: 0
+    50%
+        transform: translateY(-100%)
+        opacity: 0
+    100%
+        transform: translateY(0)
+        opacity: 1
