--- a/src/pages/community/Community.sass
+++ b/src/pages/community/Community.sass
@@ -73,35 +73,100 @@ $paragraph-font: 'PT Mono', monospace
         background-repeat: repeat-x
         background-size: 100% 22px
 
-.features
+.featuresBanner
     margin: 2rem 4rem
     font-family: $headline-font
     &__headline
         margin-bottom: 2rem
         font-size: 7rem
         font-weight: 100
-    &__cardContainer
-        margin-bottom: 8rem
+
+
+//community event page
+.marketEvents
+    margin: 8rem 4rem 4rem 4rem
+    &__returnButton
+        padding: .7rem 4rem
+        display: flex
+        align-items: center
+        position: absolute
+        border: 1px solid black
+        color: black
+        text-decoration: none
+        font-family: $paragraph-font
+        font-size: .8rem
+        letter-spacing: 1px
+        will-change: background-color, color
+        background-color: transparent
+        transition: background-color .4s, color .4s
+        cursor: pointer
+        &::before
+            content: "\21E0"
+            margin-right: .5rem
+            font-size: 1.4rem
+            position: relative
+            bottom: 1px
+        &_:visited
+            color: black
+        &:hover
+            color: white
+            background-color: black
+    &__introText
+        text-align: right
+        font-size: .9rem
+        font-weight: 100
+        line-height: 1.3rem
+        letter-spacing: 2px
+        white-space: pre-wrap
+    &__headline
+        margin: 1rem 0
+        font-family: $headline-font
+        font-size: 7rem
+        font-weight: 100
+
+.eventGrid
+    margin: 4rem
+    &__list
         display: grid
         grid-template-columns: repeat(2, 1fr)
         gap: 4rem
-        position: relative
-    &__card
-        height: 30rem
-        position: relative
+        list-style: none
+    &__item
+        display: flex
+        flex-direction: column
+        width: 100%
+        height: 29rem
+        overflow: hidden
     &__image
         width: 100%
-        height: 100%
-    &__imageHeadline
-        display: inline-block
+        max-height: 27rem
+    &__text
+        margin: 1rem 0
+        font-family: $paragraph-font
+        font-size: .9rem
+
+.featHeader
+    height: 100vh
+    background-size: 100%
+    position: relative
+    &__headline
+        font-family: $headline-font
         background-color: white
-        border-left: 10px solid #fff
-        font-size: 3rem
-        font-weight: 100
+        font-size: 5rem
+        padding: 1rem
         position: absolute
-        bottom: -2rem
-        left: 1rem
-    &__headlineSpan
-        background-color: white
-        padding: .8rem 0
-        padding-right: 10px
+        top: -4rem
+        left: 4rem
+
+.featVendor
+    margin: 4rem
+    min-height: 150vh
+    display: flex
+    gap: 2rem
+    position: relative
+    &__sidebar
+        width: 10rem
+        height: 15rem
+        position: sticky
+        top: 0
+        left: 0
