--- a/src/components/features/Features.sass
+++ b/src/components/features/Features.sass
@@ -21,15 +21,14 @@ $headline-font: 'EB Garamond', serif
         height: 100%
     &__imageHeadline
         display: inline-block
-        background-color: white
-        border-left: 10px solid #fff
+        padding: .8rem 0
+        border-left: .8rem solid #fff
         font-family: $headline-font
         font-size: 3rem
         font-weight: 100
         position: absolute
-        bottom: -2rem
+        bottom: -3rem
         left: 1rem
     &__headlineSpan
         background-color: white
-        padding: .8rem 0
-        padding-right: 10px
+        padding: .8rem .7rem .8rem 0
