--- a/src/components/navbar/Navbar.sass
+++ b/src/components/navbar/Navbar.sass
@@ -48,10 +48,11 @@ $headline-font: 'EB Garamond', serif
         font-size: 1.4rem
         letter-spacing: 2px
         color: black
+        text-align: center
         &:visited
             color: black
-    &__headline
-        text-align: center
+    &__icon
+        width: 2rem
     &__text
         display: block
         position: absolute
