--- a/src/components/footer/Footer.sass
+++ b/src/components/footer/Footer.sass
@@ -2,7 +2,44 @@
 
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
-    
+
+.overlay
+    width: 100vw
+    min-height: 100vh
+    position: fixed
+    top: 0
+    left: 0
+    bottom: 0
+    right: 0
+    z-index: 3
+    background: rgba(0, 0, 0, 0.5)
+    visibility: hidden
+    opacity: 0
+    will-change: opacity, visibility
+
+.formContainer
+    width: 70vw
+    height: 90vh
+    margin: 4rem 120px
+    visibility: hidden
+    position: absolute
+    top: 0
+    transform: translate(0, 100%)
+    z-index: 4
+    overflow-y: scroll
+    &__close
+        width: 4rem
+        height: 4rem
+        background: url("/src/assets/icons/vendor-form/bx-x-circle.svg") top left
+        background-size: 100%
+        cursor: pointer
+        position: absolute
+        top: 3rem
+        right: 15rem
+        z-index: 4
+        transform: translate(20rem, 0)
+        will-change: auto
+
 .footerBanner
     margin: 3rem 4rem
     padding: 3rem 0
