--- a/src/components/image-slider/ImageSlider.sass
+++ b/src/components/image-slider/ImageSlider.sass
@@ -1,7 +1,6 @@
 .imageSliderContainer
     margin: 4rem auto
-    width: 1140px
-    height: 830px
+    height: 50rem
     display: flex
 
 .swiper
@@ -12,7 +11,7 @@
     place-items: center
     
 .image
-    max-width: 100%
+    width: 100%
     height: 100%
     object-fit: cover
 
