--- a/src/pages/community/Community.sass
+++ b/src/pages/community/Community.sass
@@ -15,7 +15,7 @@ $paragraph-font: 'PT Mono', monospace
         text-align: center
         text-decoration: none
         font-family: $paragraph-font
-        font-size: 1rem
+        font-size: .9rem
         color: black
         will-change: color, background-color 
         transition: color .4s, background-color .4s
@@ -136,7 +136,11 @@ $paragraph-font: 'PT Mono', monospace
         flex-direction: column
         width: 100%
         height: 29rem
-        overflow: hidden
+    &__anchor
+        color: black
+        text-decoration: none
+        &:visited
+            color: black
     &__image
         width: 100%
         max-height: 27rem
@@ -145,6 +149,7 @@ $paragraph-font: 'PT Mono', monospace
         font-family: $paragraph-font
         font-size: .9rem
 
+//features vendor
 .featHeader
     height: 100vh
     background-size: 100%
@@ -153,20 +158,47 @@ $paragraph-font: 'PT Mono', monospace
         font-family: $headline-font
         background-color: white
         font-size: 5rem
-        padding: 1rem
+        font-weight: 400
+        letter-spacing: 2px
+        padding: .5rem 1rem
         position: absolute
         top: -4rem
         left: 4rem
+    &__buttonContainer
+        margin: 10rem 4rem
 
 .featVendor
     margin: 4rem
-    min-height: 150vh
     display: flex
-    gap: 2rem
     position: relative
+    gap: 2rem
     &__sidebar
-        width: 10rem
+        width: 15rem
         height: 15rem
         position: sticky
         top: 0
         left: 0
+        font-family: $paragraph-font
+        flex-shrink: 0
+    &__sidebarText
+        margin-bottom: 1rem
+        &:nth-child(1)
+            font-size: .9rem
+        &:nth-child(2)
+            font-size: 1.3rem
+    &__sidebarImage
+        margin-top: 2rem
+        height: 15rem
+        background-size: 100%
+        background-repeat: no-repeat
+
+.vendorDescription
+    font-family: $paragraph-font
+    &__list
+        list-style: none
+        margin-bottom: 3rem
+    &__item
+        margin: 2.5rem 0
+    &__question
+        font-weight: 700
+        margin-bottom: 1rem
