--- a/src/pages/home/Home.sass
+++ b/src/pages/home/Home.sass
@@ -3,6 +3,8 @@
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
 
+$mobile: 400px
+
 //Home page
 .homePage
     margin: 15rem 4rem 10rem 4rem
