--- a/src/components/navbar/Navbar.sass
+++ b/src/components/navbar/Navbar.sass
@@ -81,7 +81,40 @@ $mobile: 400px
             will-change: width, margin
             transition: margin .5s, width .5s
     @media screen and ( max-width: $mobile )
-        &__homeIconAnchor
+        width: 100vw
+        height: 100vh
+        &__list
+            margin-top: 5em
+            display: grid
+            grid-template-columns: 50vw 50vw
+            grid-template-rows: 20em 20em
+            height: 50vh
+        &__item
+            width: 100%
+            &--open
+                width: 100%
+                .nav__headline, .nav__text, .nav__anchor
+                    opacity: 1
+                    will-change: opacity
+                    transition: opacity .2s
+            &:nth-child(1)
+                animation: navStartAnimation .8s ease-in-out
+                .nav__anchor
+                    transform: rotate(-125deg)
+            &:nth-child(2)
+                animation: navStartAnimation .7s ease-in-out
+                .nav__anchor
+                    transform: rotate(-45deg)
+            &:nth-child(3)
+                animation: navStartAnimation .6s ease-in-out
+                .nav__anchor
+                    transform: rotate(-45deg)
+            &:nth-child(4)
+                animation: navStartAnimation .5s ease-in-out
+                text-align: center
+                .nav__anchor
+                    transform: rotate(-125deg)
+        &__homeIconAnchor, &__icon
             display: none
 
 @keyframes navStartAnimation
