--- a/src/pages/home/Home.sass
+++ b/src/pages/home/Home.sass
@@ -31,6 +31,8 @@ $mobile: 400px
             color: black
         &:hover
             color: black
+    @media screen and ( max-width: $mobile )
+        margin-top: 2rem
 
 .bgContainer
     height: 100vh
