--- a/src/components/container/Container.sass
+++ b/src/components/container/Container.sass
@@ -2,7 +2,7 @@
     position: relative
     width: calc(100vw - 180px)
     color: black
-    animation: opacityAnimation .7s linear forwards
+    animation: opacityAnimation 1s linear forwards
     z-index: 1
     
 .BgTopBottomContainer
@@ -26,7 +26,7 @@
 @keyframes opacityAnimation
     0%
         opacity: 0
-    80%
+    50%
         opacity: 0
     100%
         opacity: 1
