--- a/src/components/navbar/Navbar.sass
+++ b/src/components/navbar/Navbar.sass
@@ -133,8 +133,8 @@ $mobile: 400px
         margin-top: 1rem
         display: block
         position: absolute
-        top: 0
-        right: 0
+        top: 2em
+        right: 2em
         width: 3em
         height: 2em
         z-index: 4
