--- a/src/components/EventBanner/EventBanner.sass
+++ b/src/components/EventBanner/EventBanner.sass
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700&family=PT+Mono&display=swap')
 
 $paragraph-font: 'PT Mono', monospace
+$mobile: 400px
 
 .pageEvents
     padding: 1rem 4rem
@@ -44,11 +45,34 @@ $paragraph-font: 'PT Mono', monospace
         bottom: .5rem
         left: 50%
         transform: translate(-50%, -50%)
-        will-change: background-color, color
+        will-change: auto
         transition: background-color .4s, color .4s
+        text-align: center
         &:hover
             background-color: black !important
             color: white
+    @media screen and ( max-width: $mobile )
+        padding: 0 2em
+        &__list
+            flex-direction: column
+            gap: 3em
+            padding:5em 0
+            background-image: linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(90deg,#000 50%,transparent 0)
+            background-position: 0 0, 0 14px
+            background-repeat: repeat-x
+            background-size: 24px 1px
+            animation: none
+        &__item
+            width: 100%
+            padding-bottom: 2.5em
+            background-image: linear-gradient(90deg,#000 50%,transparent 0),linear-gradient(90deg,#000 50%,transparent 0)
+            background-position: 0 100%, 0 calc(100% - 14px)
+            background-repeat: repeat-x
+            background-size: 24px 1px
+        &__anchorButton
+            margin-top: 2em
+            width: 100%
+            padding: 1.5em 3em
 
 @keyframes dashedUnderlineAnimation
     0%
