--- a/src/components/footer/Footer.sass
+++ b/src/components/footer/Footer.sass
@@ -2,6 +2,7 @@
 
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
+$mobile: 400px
 
 .overlay
     width: 100vw
@@ -67,6 +68,17 @@ $paragraph-font: 'PT Mono', monospace
         &:hover
             color: white
             background-color: black
+    @media screen and ( max-width: $mobile )
+        margin: 2em
+        padding: 2em 0
+        &__headline
+            margin: 0 1em
+            font-size: 2em
+            text-align: center
+        &__button
+            margin: 2em 0
+            padding: 1.5em 2.5em
+            width: 100%
 
 .socials
     padding: 3rem 4rem
