--- a/src/pages/home/Home.sass
+++ b/src/pages/home/Home.sass
@@ -2,7 +2,6 @@
 
 $headline-font: 'EB Garamond', serif
 $paragraph-font: 'PT Mono', monospace
-
 $mobile: 400px
 
 //Home page
@@ -25,24 +24,31 @@ $mobile: 400px
         background-size: 15px 10px
         background-position: 0 101%
         background-repeat: repeat-x
-        will-change: background-position-x
+        will-change: auto
         animation: underline 1s infinite linear
         &:visited
             color: black
         &:hover
             color: black
     @media screen and ( max-width: $mobile )
-        margin-top: 2rem
+        margin: 2em 2em
+        padding-top: 4em
+        &__headline
+            width: 100%
+            font-size: 2em
+            line-height: 1.5em
 
 .bgContainer
     height: 100vh
     background: url("/src/assets/images/pages-images/home/homeImage.jpg") top left no-repeat
     background-size: cover
-    will-change: opacity
+    will-change: auto
     opacity: 0
     transition: opacity 2s
     position: relative
     z-index: 2
+    @media screen and ( max-width: $mobile )
+        height: 50vh
 
 .descriptions
     margin: 10rem 4rem
@@ -55,7 +61,7 @@ $mobile: 400px
     &__list
         display: flex
         justify-content: space-between
-        will-change: opacity
+        will-change: auto
         list-style: none
         opacity: 0
         transition: opacity 2s
@@ -70,6 +76,26 @@ $mobile: 400px
         padding-right: 1.7rem
         font-family: $paragraph-font
         font-size: .8rem
+    @media screen and ( max-width: $mobile )
+        margin: 4em 2em
+        &__headline
+            width: 100%
+            margin-bottom: 1em
+            font-size: 4em
+            line-height: 1em
+        &__list
+            flex-direction: column
+            gap: 2em
+        &__item
+            width: 100%
+            height: auto
+            margin-bottom: 1em
+        &__image
+            margin-bottom: 1em
+            height: 25em
+            object-fit: cover
+        &__text
+            padding-right: 0
 
 .eventsBanner
     margin: 4rem
@@ -85,6 +111,14 @@ $mobile: 400px
         font-size: 7rem
         font-weight: 100
         white-space: pre-line
+        font-size: .8rem
+    @media screen and ( max-width: $mobile )
+        margin: 2em
+        flex-direction: column
+        &__logo
+            font-size: 4em
+        &__headline
+            font-size: 4em
 
 .address
     margin: 5rem 4rem
@@ -110,6 +144,17 @@ $mobile: 400px
         background-size: 30px 1px,30px 1px,1px 30px,1px 30px
         &:hover
             animation: .6s infinite boxDashedUnderlineAnimation linear
+    @media screen and ( max-width: $mobile )
+        margin: 2em
+        flex-direction: column
+        &__text
+            padding: 0
+            font-size: 3em
+        &__box
+            width: 100%
+            height: 15em
+            display: grid
+            place-items: center
 
 @keyframes underline
     0%
